Swag aracını kullanarak otomatik bir şekilde Swagger Open/API şemalarına dönüştürme işlemi yapıldı.
